First building commit

--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "version": "0.1.0",
     "dependencies": {
         "asn1-ts": "^3.3.1",
+        "cms-ts": "^1.0.0-rc2",
         "x500-ts": "^1.0.0-rc1"
     }
 }
