--- a/package.json
+++ b/package.json
@@ -11,26 +11,26 @@
     ],
     "description": "Certificate Request Message Format (CRMF) in TypeScript",
     "devDependencies": {
-        "@babel/core": "^7.10.4",
-        "@babel/preset-env": "^7.10.4",
-        "@babel/preset-typescript": "^7.10.4",
-        "@types/benchmark": "^1.0.33",
-        "@types/node": "^14.0.23",
-        "@typescript-eslint/eslint-plugin": "^3.6.1",
-        "@typescript-eslint/parser": "^3.6.1",
-        "babel-jest": "^26.1.0",
+        "@babel/core": "^7.12.10",
+        "@babel/preset-env": "^7.12.11",
+        "@babel/preset-typescript": "^7.12.7",
+        "@types/benchmark": "^2.1.0",
+        "@types/node": "^14.14.22",
+        "@typescript-eslint/eslint-plugin": "^4.14.2",
+        "@typescript-eslint/parser": "^4.14.2",
+        "babel-jest": "^26.6.3",
         "benchmark": "^2.1.4",
-        "eslint": "^7.4.0",
-        "jest": "^26.1.0",
-        "jest-junit": "^11.0.1",
-        "npm-check-updates": "^7.0.1",
-        "prettier": "^2.0.5",
+        "eslint": "^7.19.0",
+        "jest": "^26.6.3",
+        "jest-junit": "^12.0.0",
+        "npm-check-updates": "^11.1.1",
+        "prettier": "^2.2.1",
         "prettier-plugin-organize-imports": "^1.1.1",
         "sloc": "^0.2.1",
-        "ts-loader": "^8.0.0",
-        "typescript": "^3.9.6",
-        "webpack": "^4.43.0",
-        "webpack-cli": "^3.3.12"
+        "ts-loader": "^8.0.14",
+        "typescript": "^4.1.3",
+        "webpack": "^5.19.0",
+        "webpack-cli": "^4.4.0"
     },
     "directories": {
         "doc": "documentation",
@@ -62,10 +62,10 @@
         "test": "npx jest --ci --reporters=default --reporters=jest-junit --coverage"
     },
     "types": "./dist/node/index.d.ts",
-    "version": "0.1.0",
+    "version": "1.0.0",
     "dependencies": {
-        "asn1-ts": "^3.3.1",
-        "cms-ts": "^1.0.0-rc2",
-        "x500-ts": "^1.0.0-rc1"
+        "asn1-ts": "^5.0.2",
+        "cms-ts": "^2.0.0",
+        "x500-ts": "^3.2.3"
     }
 }
